# ADAMIXTURE

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
adamixture/: entry.py  plot_entry.py  project_entry.py  supervised_entry.py
adamixture/demo/: README.md  generate_device_expected.py  run_demo.sh  run_diagnostics.py
adamixture/demo/data/: demo_data.bed.zst  demo_data.bim.zst  demo_data.fam.zst  demo_data.psam  demo_data.pvar  demo_data.vcf  demo_data.vcf.zst  demo_data_pgen_sidecars_zst.pgen  demo_data_pgen_sidecars_zst.psam.zst  demo_data_pgen_zst.pgen.zst  demo_data_pgen_zst.pvar.zst
adamixture/demo/outputs/cpu/adamem/: demo_run.adamem.P.expected  demo_run.adamem.Q.expected
adamixture/demo/outputs/cpu/brqn/: demo_run.als.P.expected  demo_run.als.Q.expected  demo_run.brqn.P.expected  demo_run.brqn.Q.expected  demo_run.svd.S.expected  demo_run.svd.U.expected  demo_run.svd.V.expected
adamixture/demo/outputs/gpu/adamem/: demo_run.adamem.P.expected  demo_run.adamem.Q.expected
adamixture/demo/outputs/gpu/brqn/: demo_run.als.P.expected  demo_run.als.Q.expected  demo_run.brqn.P.expected  demo_run.brqn.Q.expected  demo_run.svd.S.expected  demo_run.svd.U.expected  demo_run.svd.V.expected
adamixture/demo/outputs/reader/: demo_data.G.expected  demo_data.G.packed.expected
adamixture/eval/: evaluation.py  stability.py
adamixture/model/: br_qn.py  br_qn_gpu.py  em_adam_gpu.py
adamixture/src/: adamixture.py  cv.py  main.py  plot.py  projection.py  snp_reader.py  supervised.py  utils.py
adamixture/src/utils_c/: __init__.py
adamixture/src/utils_c/cuda/: sqp_kernel.cu
adamixture/src/utils_c/cython/: br_qn.pyx  snp_reader.pyx  sqp.pyx
docs/: troubleshooting.md
tests/: config.py  conftest.py  helpers.py  test.py  test_adamem_cpu.py  test_brqn_cpu.py  test_cuda.py  test_mps.py  test_reader.py
