[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools_scm[toml]>=6.2",
    "Cython>=3.0.0",
    "numpy>=2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "adamixture"
dynamic = ["version"]
description = "ADAMIXTURE: Adaptive First-Order Optimization for Biobank-Scale Ancestry Inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Joan Saurina i Ricós", email = "joansaurinaricos@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["genetic-clustering", "population-genetics", "adam", "em-algorithm", "biobank"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "configargparse>=1.5.3",
    "Cython>=3.0.0",
    "numpy>=2.0.0",
    "matplotlib>=3.5.0",
    "torch>=2.6.0",
    "pgenlib>=0.94.0",
    "zstandard>=0.25.0",
    "ninja",
]

[project.urls]
Homepage = "https://github.com/AI-sandbox/ADAMIXTURE"
Repository = "https://github.com/AI-sandbox/ADAMIXTURE"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
adamixture = "adamixture.entry:main"
adamixture-plot = "adamixture.plot_entry:main"
adamixture-project = "adamixture.project_entry:main"
adamixture-supervised = "adamixture.supervised_entry:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["adamixture*"]

[tool.setuptools.package-data]
adamixture = [
    "src/utils_c/cuda/*.cu",
    "src/utils_c/cython/*.pyx",
    "src/utils_c/metal/*.metal",
    "demo/README.md",
    "demo/run_demo.sh",
    "demo/run_diagnostics.py",
    "demo/generate_device_expected.py",
    "demo/data/*",
    "demo/outputs/reader/*.expected",
    "demo/outputs/cpu/brqn/*.expected",
    "demo/outputs/cpu/adamem/*.expected",
    "demo/outputs/gpu/brqn/*.expected",
    "demo/outputs/gpu/adamem/*.expected",
    "demo/outputs/mps/brqn/*.expected",
    "demo/outputs/mps/adamem/*.expected",
]

[tool.setuptools_scm]
write_to = "adamixture/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "E203",  # whitespace before ':', conflicts with formatters
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["adamixture"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--ignore=adamixture/entry.py"
testpaths = ["tests"]
